# lxqt-backlight

./: CMakeLists.txt  README.md  lxqt-backlight.c  org.lxqt.backlight.pkexec.policy.in
liblxqtbacklight/: CMakeLists.txt  lxqtbacklight.cpp  lxqtbacklight.h
liblxqtbacklight_backend/: CMakeLists.txt  lxqtbacklight_backend.c
lxqt-backlight-gui/: CMakeLists.txt  lxqt-backlight.cpp  lxqt-backlight.desktop  lxqt-backlight.h  lxqtbacklight.ui  main.cpp
lxqtbacklight_backend/: CMakeLists.txt  lxqtbacklight_backend.c
